# python_package_memo

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  my_sample_package.rst
src/my_sample_package/: __init__.py  my_class.py  my_math_class.py
tests/: test_math_class.py  test_my_class.py
