[tool.poetry]
name = "my-sample-package"
version = "0.1.0"
description = ""
authors = ["Eiji <hoge@unko.com>"]
readme = "README.md"
packages = [{include = "my_sample_package"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.3"


[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
groundwork-sphinx-theme = "^1.1.1"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
